--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@os-team/i18next-react-native-language-detector": "^1.0.18",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "i18next": "^22.0.4",
     "react": "18.1.0",
+    "react-i18next": "^12.0.0",
     "react-native": "0.70.3",
     "react-native-image-picker": "^4.10.0",
     "react-native-webview": "^11.23.1"
