--- a/ios/nativAppsTest/Info.plist
+++ b/ios/nativAppsTest/Info.plist
@@ -2,6 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>User to select Image/Video from photos</string>
+
+	<key>NSCameraUsageDescription</key>
+	<string>User to select Image/Video from photos</string>
+
+	<key>NSMicrophoneUsageDescription</key>
+	<string>User to select Image/Video from photos</string>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
